--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -9,17 +9,12 @@
           Email es requerido
       </small>
   </div>
-  <div class="form-group">
+  <div class="form-group mb-4">
       <label for="passwordLogin">Contraseña</label>
       <input type="password" [ngClass]="{ 'is-invalid': isValid()['password'].dirty && isValid()['password'].errors }" autocomplete="off" class="form-control"  [readonly]="loadPage" formControlName="password" aria-describedby="passwordlHelp" id="passwordLogin" placeholder="Contraseña">
       <small *ngIf="isValid()['password'].errors && isValid()['password'].dirty" id="passwordlHelp" class="form-text text-muted">
           La contraseña es requerida
       </small>
-  </div>
-  <div class="p-2">
-    <p class="text-right">
-        <a [routerLink]="['/register']" >Register</a>
-    </p>
   </div>
   <button type="submit" class="btn btn-outline-info w-100" [disabled]="LogInForm.invalid || loadPage" >
       <fa-icon *ngIf="!loadPage" [icon]="iconSent"></fa-icon>
