--- a/src/app/views/my-searches-results/my-searches-results.component.html
+++ b/src/app/views/my-searches-results/my-searches-results.component.html
@@ -1,8 +1,10 @@
 <h2>
   Resultados antiguos para:  <small class="text-danger">{{busqueda}}</small>
 </h2>
-
-<div class="mt-3 table-responsive">
+<div class="">
+  % de coincidencias: {{porcentaje}}%
+</div>
+<div class="mt-5 table-responsive">
   <table class="table">
     <thead>
       <tr>
